objects/Launch__c.object
<CustomObject>
    <description>Used by CB Services to track progress of website build in progress</description>
    <fields>
        <fullName>Account_Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Advocate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Handed_to_Specialist__c</fullName>
        <inlineHelpText>This field will affect the billed date field when the launch record is closed. Please enter the date as accurately as possible.</inlineHelpText>
        <label>Account Handed to Specialist</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Launch</relationshipLabel>
        <relationshipName>Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activation_OM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activation OM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchUO3u</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Build_Time__c</fullName>
        <label>Actual Build Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Proto_Time__c</fullName>
        <label>Actual Proto Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Review_URL__c</fullName>
        <label>Ad Review URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Add_Ons__c</fullName>
        <inlineHelpText>Please enter a value if the website order includes any of ala carte items.</inlineHelpText>
        <label>Add Ons</label>
        <picklist>
            <picklistValues>
                <fullName>Audience Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Differentiator Pak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CCA Tire Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM DAP 5 Star Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM DAP 5 Star Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW Care</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Documentation_Attached__c</fullName>
        <label>Additional Documentation Attached</label>
        <picklist>
            <picklistValues>
                <fullName>None Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Attached</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advocate_Email__c</fullName>
        <description>This field is updated by a workflow with the Advocate email from the WebId object.</description>
        <label>Advocate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <inlineHelpText>Please enter the name of the person that approved the 911 priority for this order and attach the approval.</inlineHelpText>
        <label>Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_me__c</fullName>
        <formula>IF( $User.Id = Secondary_Owner__r.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Created__c</fullName>
        <label>Banner Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Banner_Request_Submitted__c</fullName>
        <label>Banner Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Banner_Resubmit_Date__c</fullName>
        <inlineHelpText>Enter a date to notify Design that more work may be needed on the Banner.</inlineHelpText>
        <label>Banner Resubmit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Banner_Setup_Completed__c</fullName>
        <formula>Design_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner Setup Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billable_Date__c</fullName>
        <formula>IF ( AND ( IsNULL(Account_Handed_to_Specialist__c) , DAY(Today()) &lt;= 25 ),
DATE ( YEAR( TODAY()), MONTH (TODAY()), 25),

IF ( AND ( IsNULL(Account_Handed_to_Specialist__c), DAY(Today()) &gt; 25 ),
DATE ( YEAR( TODAY()), MONTH (TODAY())+1, 25),

IF ( DAY ( Account_Handed_to_Specialist__c ) &lt;=25,
Date(Year(Account_Handed_to_Specialist__c), Month(Account_Handed_to_Specialist__c),25),

IF ( DAY ( Account_Handed_to_Specialist__c ) &gt; 25,
Date(Year(Account_Handed_to_Specialist__c), Month(Account_Handed_to_Specialist__c)+1, 25), NULL))))</formula>
        <label>Billable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Update_Order_Number__c</fullName>
        <label>Billing Update Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocking_Reason__c</fullName>
        <inlineHelpText>Describe the reason the Dealer is blocking the order.</inlineHelpText>
        <label>Blocking Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Body_Shop_Budget__c</fullName>
        <inlineHelpText>Please Enter the Body Shop Budget OR N/A in this field.</inlineHelpText>
        <label>Body Shop Budget</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Audit_Checklist__c</fullName>
        <label>Booking Audit Checklist</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_OM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking OM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchUNO3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <inlineHelpText>Please select the brands that apply to Product Type(s) selected above.</inlineHelpText>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bug_Ticket_Link_URL__c</fullName>
        <label>Bug Ticket Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bug_Ticket_Number__c</fullName>
        <label>Bug Ticket Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Age__c</fullName>
        <formula>IF( ISNULL(  Build_Assign_Date__c ) , NULL,
      IF(  ISNULL(   Build_Completion_Date__c   ) ,  NOW() -Build_Assign_Date__c , Build_Completion_Date__c -Build_Assign_Date__c ))</formula>
        <inlineHelpText>Current age of Build section from assignment to now or assignment to completion.</inlineHelpText>
        <label>Build Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Assign_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Builder was first assigned to this Launch record.</inlineHelpText>
        <label>Build Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Build_Completion_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Build Status was set to Complete the last time.</inlineHelpText>
        <label>Build Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Build_Notes__c</fullName>
        <label>Build Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_Open_Status__c</fullName>
        <description>This field is used to summarize the Build status so you can easily see if the build status is in an open or closed state.  This should be used in validation rules and workflow rules as needed.</description>
        <formula>IF( 
OR( 
ISPICKVAL(   Build_Status__c , &quot;Build Complete&quot;), 
CONTAINS(TEXT( Build_Status__c ) , &quot;N/A &quot;) 
),&quot;Closed&quot;, &quot;Open&quot;)</formula>
        <label>Build Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_QA_Assign_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Build QA was first assigned to this Launch record.</inlineHelpText>
        <label>Build QA Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Build_ReSubmit_Date__c</fullName>
        <inlineHelpText>Enter a date to notify Builder that more work may be needed if the Build Status is set to &quot;Build Complete.&quot;</inlineHelpText>
        <label>Build ReSubmit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Request_Submit_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Build work request was submitted to the Build team.</inlineHelpText>
        <label>Build Request Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Build_Request_Submitted__c</fullName>
        <inlineHelpText>When order is ready for a Builder to become involved fill in todays date.  This will set the Status to &quot;Ready for Builder&quot; and put the record into their queue.</inlineHelpText>
        <label>Build Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Status__c</fullName>
        <inlineHelpText>&quot;Ready for Builder&quot; will put record in Build Queue, &quot;With Builder&quot; and &quot;Proto Loop&quot; will keep the record in the Builder&apos;s work in progress view.</inlineHelpText>
        <label>Build Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proto Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proto Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Sent to Order Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Build Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Send to Ad Ops</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Builder_Checklist_Notes__c</fullName>
        <label>Builder Checklist Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Builder_Checklist_Score__c</fullName>
        <label>Builder Checklist Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Builder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch3Builder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Age__c</fullName>
        <formula>IF( ISNULL( Bulk_Order_Assign_Date__c ) , NULL, 
IF( ISNULL( Bulk_Order_Completion_Date__c ) , NOW()-Bulk_Order_Assign_Date__c , Bulk_Order_Completion_Date__c-Bulk_Order_Assign_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk Order Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Assign_Date__c</fullName>
        <label>Bulk Order Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Completed_Date__c</fullName>
        <label>Bulk Order Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Completion_Date__c</fullName>
        <label>Bulk Order Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Corp_IT_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Order Corp IT Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchsdJr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Manager_Notes__c</fullName>
        <label>Bulk Order Manager Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Notes__c</fullName>
        <label>Bulk Order Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_ReSubmit_Date__c</fullName>
        <label>Bulk Order ReSubmit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Request_Submitted__c</fullName>
        <label>Bulk Order Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Requested_Date__c</fullName>
        <label>Bulk Order Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Status__c</fullName>
        <label>Bulk Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Order Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Order Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Corp IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Order Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A – No Bulk Order Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Submit_Date__c</fullName>
        <label>Bulk Order Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAM_Email__c</fullName>
        <description>This email is updated by a workflow with the Digital Services Marketing Strategist email from the Account object. Do not display on page layout - this is intended for workflows</description>
        <label>Marketing Strategist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLM_Group_1_Complete__c</fullName>
        <label>CLM Group 1 Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLM_s_Approved__c</fullName>
        <label>CLM&apos;s Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLM_s_Sent_to_Dealer__c</fullName>
        <label>CLM&apos;s Sent to Dealer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTN_s_Configured__c</fullName>
        <label>CTN&apos;s Configured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTN_s_Verified__c</fullName>
        <label>CTN&apos;s Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Order_in_Oracle__c</fullName>
        <inlineHelpText>Date that OM confirmed that the dealership&apos;s WebID is set to paying in Grand Central.</inlineHelpText>
        <label>Closed Order in Oracle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Collections_Notes__c</fullName>
        <label>Collections Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collections_Score__c</fullName>
        <label>Collections Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_Due_Date__c</fullName>
        <inlineHelpText>Please enter the date that was committed to the requester for order completion.</inlineHelpText>
        <label>Committed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirm_code_snip_placement_on_5_pages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm code snip placement on 5 pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_non_CDK_site_flow_from_code_snip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm non-CDK site flow from code snip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Domain_Transfer_Complete__c</fullName>
        <inlineHelpText>Date that OM confirmed that the dealership&apos;s WebID is set to paying in Grand Central.</inlineHelpText>
        <label>Confirmed Domain Transfer Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_WebID_Set_to_Paying__c</fullName>
        <inlineHelpText>Date that OM confirmed that the dealership&apos;s WebID is set to paying in Grand Central.</inlineHelpText>
        <label>Confirmed WebID Set to Paying</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>Integration User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Launch</relationshipLabel>
        <relationshipName>Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Budget__c</fullName>
        <inlineHelpText>Please fill out the value if the Core product is ordered.</inlineHelpText>
        <label>Core Budget</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creative_Summary_Attached__c</fullName>
        <label>Creative Summary Attached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Critical_Notes__c</fullName>
        <label>Critical Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DAP_Email_Verified__c</fullName>
        <inlineHelpText>This field should only be filled out if the Product Types Email Marketing Sales and/or Email Marketing Services are selected</inlineHelpText>
        <label>DAP Email Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes $500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes $0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAP_Tool_Configuration_Completed__c</fullName>
        <label>DAP Tool Configuration Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_Completed__c</fullName>
        <label>DI Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_Delay_Issue__c</fullName>
        <inlineHelpText>Enter date DI delay issue was noted.</inlineHelpText>
        <label>DI Delay Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_Status__c</fullName>
        <inlineHelpText>Use &quot;Completed&quot; if DI has been attached to the launch record.
Use &quot;Escalated&quot; if all attempts to reach the dealer have been unsuccessful.</inlineHelpText>
        <label>DI Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DI_Submitted_To_Vendor__c</fullName>
        <label>DI Submitted To Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <picklist>
            <picklistValues>
                <fullName>500 Portland-Auburn, ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501 New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>502 Binghamton, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>503 Macon, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>504 Philadelphia, PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>505 Detroit, MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>506 Boston, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>507 Savannah, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>508 Pittsburgh, PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>509 Ft. Wayne, IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>510 Cleveland, OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>511 Washington, DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>512 Baltimore, MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>513 Flint-Saginaw et al, MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>514 Buffalo, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>515 Cincinnati, OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>516 Erie, PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>517 Charlotte, NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>518 Greensboro et al, NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>519 Charleston, SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>520 Augusta, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>521 Providence et al, RI-MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>522 Columbus, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>523 Burlington et al, VT-NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>524 Atlanta, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>525 Albany, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>526 Utica, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>527 Indianapolis, IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>528 Miami-Ft. Lauderdale, FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>529 Louisville, KY</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Contact_Email__c</fullName>
        <label>DMS Contact Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Contact_Phone__c</fullName>
        <label>DMS Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DMS_Contact__c</fullName>
        <label>DMS Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Secondary__c</fullName>
        <label>DMS (Secondary)</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP ARG (EDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds &amp; Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelectQu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <label>DMS (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP ARG (EDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds &amp; Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelectQu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSM_Email__c</fullName>
        <description>This email is updated by a workflow with the DSM email from the Account object.  Do not display on page layout - this is intended for workflows.</description>
        <label>DSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Data_Approved__c</fullName>
        <label>Data Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ops_Age__c</fullName>
        <formula>IF( ISNULL( Data_Ops_Assign_Date__c ) , NULL,
      IF(  ISNULL(  Data_Ops_Completion_Date__c  ) ,  NOW() -Data_Ops_Assign_Date__c , Data_Ops_Completion_Date__c-Data_Ops_Assign_Date__c ))</formula>
        <inlineHelpText>Current age of Data Ops section from assignment to now or assignment to completion.</inlineHelpText>
        <label>Data Ops Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Ops_Age_by_Days__c</fullName>
        <description>Number of calendar days between DI submitted to vendor date and Data Ops Completion Date.</description>
        <formula>IF(
DateValue( Data_Ops_Completion_Date__c  ) -
DI_Submitted_To_Vendor__c &lt; 0, 0,
DateValue( Data_Ops_Completion_Date__c  ) -
DI_Submitted_To_Vendor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Ops Age by Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Ops_Assign_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Data Ops Specialist was first assigned to this Launch record.</inlineHelpText>
        <label>Data Ops Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Ops_Completion_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Data Ops Status was set to Complete the last time.</inlineHelpText>
        <label>Data Ops Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Ops_Integralink_Ticket__c</fullName>
        <label>Data Ops Integralink Ticket #</label>
        <type>Url</type>
    </fields>
</CustomObject>